2002-02-27  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-zoomable-frame.c
	(bonobo_zoomable_frame_bind_to_zoomable),
	(bonobo_zoomable_frame_dispose): only hold a CORBA
	ref on the remote zoomable, to ease ref counting
	issues with BonoboControl.

2002-02-27  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-control.c:
	(bonobo_control_get_popup_ui_container): fix
	race condition/re-entrancy bug.

2002-02-26  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in: now libbonoboui needs gtk+ 1.3.14

	* bonobo/bonobo-ui-sync-status.c (impl_bonobo_ui_sync_status_state): 
	Show the resize grip if resize_grip is set to 1.

	* bonobo/bonobo-file-selector-ui.c: fixed to work
	with the new GtkFileSelection API for multiple files

2002-02-24  Jody Goldberg <jody@gnome.org>

	* bonobo/bonobo-ui-component.h (BonoboUIVerb) : const the name to
	  silence some warnings.

2002-02-25  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar.c (impl_set_property): 
	fix uint -> boolean.

2002-02-25  Johan Dahlin  <jdahlin@telia.com>

	* bonobo/bonobo-ui-engine.h (BONOBO_IS_UI_ENGINE): Make macros and
	bonobo_ui_engine_get_type public

2002-02-25  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: REALLY Added Malay (ms)to ALL_LINGUAS.

2002-02-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(control_connection_died_cb): upd. to disconnect us
	safely & fire a "system_exception" signal.

	* tests/Makefile.am (-DBONOBO_TOPBUILDDIR): define.

	* tests/test-ui-auto.c (test_ui_performance): use it.

2002-02-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (class_init): add
	cmd_id & commands_id.
	(find_sync_for_node): we have no sync. for commands.

	* bonobo/bonobo-ui-sync-keys.c
	(impl_bonobo_ui_sync_keys_can_handle): accel.

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_can_handle): expand
	scope to accelerate.

	* bonobo/bonobo-ui-sync-toolbar.c
	(impl_bonobo_ui_sync_toolbar_can_handle): ditto.
